# ally-language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ]  build.sh  debug.sh  debug_build.sh  run.sh
include/ally/: location.h
include/ally/ast/: expr.h  function.h  other.h  stmt.h
include/ally/error/: ErrorCode.h  ErrorHandler.h  ErrorMessage.h
include/ally/lexer/: lexer.h  token.h
include/ally/mir/: baseterm.h  block.h  builder.h  function.h  symboltable.h  terminator.h  value.h
include/ally/mir/node/: base.h  expr.h  stmt.h
include/ally/parser/: parser.h
include/ally/sema/: Symbol.h  SymbolTable.h  sema.h
src/: lexer.cpp  main.cpp  parser.cpp
src/ast/: expr.cpp  function.cpp  other.cpp  stmt.cpp
src/error/: ErrorHandler.cpp  ErrorMessage.cpp
src/mir/: block.cpp  builder.cpp  function.cpp  terminator.cpp  value.cpp
src/mir/node/: base.cpp  expr.cpp  stmt.cpp
src/sema/: sema.cpp  symbolTable.cpp
src/sema/analysis/: expr.cpp  function.cpp  other.cpp  stmt.cpp
